2003-11-21  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: prevent wrapped line height calculations 
	until the widget has actually been given a geometry.
	
	* tests/textWind.test: 
	* tests/textDisp.test: fix to [Bug 843752], allowing tests to
	complete cross-platform.  Thanks to dgp for extensive testing.
	
2003-11-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/FindPhoto.3: Removed reference to long-gone header file.

2003-11-20  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinSend.c:
	* win/tkWinSendCom.c: ensure object is not shared before lappend
	(fix for crash in Windows test suite), and clean up of files to 
	bring them closer to Tcl standards.
	
2003-11-20  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXKeyboard.c: Add PowerBook keycode 0x34 as <Return>.

2003-11-18  Jim Ingham  <jingham@apple.com>

        * macosx/tkMacOSXScrlbr.c: Reworking Vince's fix to [Bug 842952].  This
        version is clearer, and works helps keep the mouse better pinned to the
        scrollbar.  I also removed the glitch where the scrollbar would jump get
        its middle over the mouse when you first moved it.
         
2003-11-17  Don Porter	<dgp@users.sourceforge.net>

	* tests/constraints.tcl:When running the test suite in a process
	* tests/image.test:	where Tk has been [load]ed, there's no
	* tests/select.test:	guarantee that child processes created by
	* tests/unixWm.test:	[exec [interpreter]] will have Tk in them.
	* tests/window.test:	Made modifications to force a [load] of Tk
				in those situations.

2003-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenubutton.h: fixed compound menubutton handling like
	* generic/tkMenubutton.c: *button corrections of 2003-04-25.
	* mac/tkMacMenubutton.c (TkpDisplayMenuButton): 
	* unix/tkUnixMenubu.c (TkpDisplayMenuButton): 

2003-11-16  Don Porter	<dgp@users.sourceforge.net>
